--- a/study_code/b_step_01/css/src/c_01_position_set.css
+++ b/study_code/b_step_01/css/src/c_01_position_set.css
@@ -111,6 +111,7 @@ ul li:last-child::after {display: none;} */
   width: 100%; height: 30px;
 }
 .nav_list li {
+  position: relative;
   float: left;
   width: auto; height: auto;
   margin-right: 10px;
@@ -121,8 +122,10 @@ ul li:last-child::after {display: none;} */
   margin-right: 0;
 }
 
+/* 가상요소: before 사용 */
 .nav_list li:before,
 .nav_list li::before {
+  display: none;
   content: ""; float: left;
   width: 1px; height: 10px;
   margin-left: -5px; margin-top: 5px;
@@ -132,7 +135,30 @@ ul li:last-child::after {display: none;} */
 .nav_list li:first-child:before,
 .nav_list li:first-child::before {display: none;}
 
+/* 가상요소: after 사용 */
+.nav_list li:after,
+.nav_list li::after {
+  content: ""; display: block;
+  position: absolute; top: 0; bottom: 0; right: -5px;
+  margin: auto;
+  width: 1px; height: 10px;
+  border-right: 1px solid #777;
+  display: none;
+} 
+
+.nav_list li:last-child:after,
+.nav_list li:last-child::after { display: none;}
+
+/* li에 border를 활용하는 방법 */
+.nav_list li {
+  padding-right: 10px; margin-right: 10px;
+  border-right: 1px solid #777;
+}
+
+.nav_list li:last-child { border: 0; padding-right: 0;}
+
 .nav_list a {
   width: 100%; height:50px;
   padding: 3px 5px;
+  background-color: #7dd;
 }
