--- a/study_code/b_step_02/css/src/transform.css
+++ b/study_code/b_step_02/css/src/transform.css
@@ -43,6 +43,7 @@ h3 {background-color: #ddf;}
 /* ============================================ */
 
 .translate li { transition: all 500ms ease;}
+
 .translate:hover li:nth-child(1) { transform: translateX(100px);}
 .translate:hover li:nth-child(2) { transform: translateY(-100px);}
 .translate:hover li:nth-child(3) { transform: translate(-120px, 50px);}
@@ -59,5 +60,22 @@ h3 {background-color: #ddf;}
 .scale:hover li:nth-child(4) {transform: scale(0.5, 1.5);}
 .scale:hover li:nth-child(5) {transform: scaleZ(2);}
 
+/* ------------------------------------------- */
+
+.skew li { margin: 30px; transition: all 300ms ease-in; font-size: 2rem;}
+
+.skew:hover li:nth-child(1) {transform: skew(30deg);}
+.skew:hover li:nth-child(2) {transform: skewY(30deg);}
+.skew:hover li:nth-child(3) {transform: skew(30deg, 15deg);}
+.skew:hover li:nth-child(4) {transform: skewX(45deg);}
+.skew:hover li:nth-child(4) span { display: block; transform: skewX(-45deg);}
+
+/* -------------------------------------------------- */
+.rotate li { margin: 40px; transition: all 300ms ease-in;}
+
+.rotate:hover li:nth-child(1) {transform: rotate(45deg);}
+.rotate:hover li:nth-child(2) {transform: rotateY(720deg);}
+.rotate:hover li:nth-child(3) {transform: rotateX(30deg);}
+.rotate:hover li:nth-child(4) {transform: rotate(30deg, 45deg);}
 
 
