--- a/study_code/b_step_02/css/src/transform.css
+++ b/study_code/b_step_02/css/src/transform.css
@@ -76,6 +76,66 @@ h3 {background-color: #ddf;}
 .rotate:hover li:nth-child(1) {transform: rotate(45deg);}
 .rotate:hover li:nth-child(2) {transform: rotateY(720deg);}
 .rotate:hover li:nth-child(3) {transform: rotateX(30deg);}
-.rotate:hover li:nth-child(4) {transform: rotate(30deg, 45deg);}
+.rotate:hover li:nth-child(4) {transform: rotate3d(1, 1, 1, 45deg);}
+.rotate:hover li:nth-child(5) {
+  backface-visibility: hidden;
+  transform: rotateY(180deg);
+}
 
+/* 카드 뒤집기 */
+.rotate li:nth-child(5) {
+  position: relative;
+  width: 200px; height: 150px;
+}
+.rotate li div { width: 100%; height: 100%;}
+
+.front { 
+  position: absolute; top: 0; left: 0; z-index: 1;
+  background-color: #fa0; 
+  /* backface-visibility: hidden; */
+}
+.back { 
+  background-color: #acf; 
+  transform: rotateY(180deg);
+}
+/* 
+.rotate li div {backface-visibility: hidden;}
+
+.rotate li:hover .front{ transform: rotateY(180deg);}
+.rotate li:hover .back{ transform: rotateY(360deg);} */
+
+/* ------------------------------------------------- */
+
+.part .rotate2 {
+  perspective: 500px;
+  float: left;  width: auto;
+}
+.rotate2 li { 
+  float: left; transition: all 1500ms linear;
+  text-align: center; line-height: 100px;
+}
+.rotate2:hover li { transform: rotateX(360deg);}
+
+/* -------------------------------------------------- */
+.part .rotate3 {
+  float: left; width: auto; margin-top: 40px;
+}
+
+.rotate3 li {
+  float: left; transition: all 1500ms linear;
+  text-align: center; line-height: 100px;
+}
+
+.rotate3:hover li { transform: perspective(300px) rotateY(180deg);}
+
+/* ------------------------------------------------------- */
+
+.multi_tr li { margin: 40px; transition: all 1000ms ease;}
+
+.multi_tr:hover li:nth-child(1) {
+  transform: translateX(500px) rotate(180deg);
+}
+.multi_tr:hover li:nth-child(2) {
+  transform: rotate(180deg) translateX(500px);
+}
 
