--- a/study_code/b_step_02/css/src/b_01_video.css
+++ b/study_code/b_step_02/css/src/b_01_video.css
@@ -36,3 +36,10 @@
   max-height: 100%; */
   transform: translate(-50%, -50%);
 }
+
+.movie iframe {
+  /* width: 560px; height: 315px; */
+  width: auto; height: auto;
+  min-width: 100%; min-height: 100%;
+  border: 0;
+}
