--- a/study_code/c_layout_01/css/common/reset.css
+++ b/study_code/c_layout_01/css/common/reset.css
@@ -11,8 +11,9 @@ p,pre,blockquote,address,
 ul,ol,li,dl,dt,dd,
 hr, button, img, div,
 header, article, nav, section, footer, aside, 
-main, figure, figcaption, hgroup {
-  margin: 0; padding: 0; font-size: 100%;
+main, figure, figcaption, hgroup,
+form, fieldset {
+  margin: 0; padding: 0; border: 0; font-size: 100%;
   box-sizing: border-box;
 }
 
