--- a/study_code/b_step_02/css/src/b_04_form_step_01.css
+++ b/study_code/b_step_02/css/src/b_04_form_step_01.css
@@ -23,3 +23,46 @@ legend {
   border-left: 5px solid #f06;
   text-indent: 1rem;
 }
+
+textarea {
+  width: 400px; height: 100px;
+  resize: none;
+  background-color: #fd7;
+}
+
+select {
+  width: 200px; height: 30px;
+  background-color: #a1caff;
+}
+
+option {
+  font-size: 1.1rem;
+  margin-bottom: 1rem;
+  border-bottom: 1px solid #aff;
+  background-color: #7aa;
+}
+
+option:hover {
+  color: #fff; font-weight: 700;
+  font-size: 1.2rem;
+}
+
+.like_select {
+  width: 250px; height: 30px;
+  background-color: #fd7;
+}
+.like_select dt { width: 100%; height: 100%;}
+.like_select dd { 
+  display: none;
+  width: 100%; height: 100%;
+  background-color: #faa;
+}
+
+.like_select ul { width: 100%; height: auto;}
+.like_select li { 
+  width: 100%; height: auto; 
+  border-bottom: 1px solid #057;
+  margin-bottom: 0.3rem;
+}
+
+.like_select:hover > dd {display: block;}
