--- a/study_code/c_layout_01/css/src/b_08_naver_signup.css
+++ b/study_code/c_layout_01/css/src/b_08_naver_signup.css
@@ -1,27 +1,179 @@
 @charset "UTF-8";
 /* b_08_naver_signup.css */
-body {background-color: #eee;}
-#wrap { width: 900px; height: auto;}
+body {background-color: #F5F6F7; color: #171717;}
+#wrap { width: 900px; height: auto; padding-top: 50px; padding-bottom: 500px;}
 
+h1 {
+  width: 240px; height: 44px;
+  margin: auto;
+  background-image: url(https://static.nid.naver.com/images/ui/join/m_naver_logo_20191126.png);
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-size: 240px auto;
+}
 .join_wrap { width: 500px; height: auto; margin: auto; margin-top: 50px;}
 
 .join_wrap li { 
   width: 460px; height: auto; 
-  margin-bottom: 20px;
-  background-color: #fff;
+  margin-bottom: 10px;
+  /* background-color: #fff; */
 }
 
 .join_title {
+  margin-bottom: 0.5rem;
   font-size: 14px;
   font-weight: 500;
 }
 
-fieldset { height: 50px; padding: 10px;}
-input { height: 30px;}
+fieldset { 
+  height: 50px; padding: 10px; 
+  border: 1px solid #dadada;
+  background-color: #fff;
+}
+input { height: 30px; border: 0; font-size: 16px;}
+input:focus { outline: 0;}
 
-.join_id { width: 460px; height: 50px; background-color: #faa;}
+/* ------------------------------------------------------- */
+.join_id { 
+  width: 460px; height: 50px; 
+  /* background-color: #faa; */
+}
 .join_id input {
   float: left; 
-  width: 350px;
+  width: 320px;
 }
+
+.id_url { 
+  float: right; margin-right: 10px; 
+  color: #999; font-weight: 100;
+}
+
+
+/* -------------------------------------------------------- */
+.join_pw { 
+  width: 460px; height: 50px; 
+  /* background-color: #faa; */
+}
+.join_pw input {
+  float: left; 
+  width: 400px;
+}
+
+.pw_icon {
+  float: right;
+  width: 24px; height: 24px;
+  background-image: url(https://static.nid.naver.com/images/ui/join/m_icon_pw_step.png);
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-size: 125px 75px;
+  cursor: pointer;
+}
+
+/* -------------------------------------------------------- */
+
+.join_re_pw { 
+  width: 460px; height: 50px; 
+  margin-bottom: 40px;
+  /* background-color: #faa; */
+}
+.join_re_pw input {
+  float: left; 
+  width: 400px;
+}
+
+.pw_re_icon {
+  float: right;
+  width: 24px; height: 24px;
+  background-image: url(https://static.nid.naver.com/images/ui/join/m_icon_pw_step.png);
+  background-repeat: no-repeat;
+  background-position: -27px 0;
+  background-size: 125px 75px;
+  cursor: pointer;
+}
+
+/* -------------------------------------------------------- */
+
+.join_name {
+  width: 460px; height: 50px; 
+}
+
+.join_name input {  width: 100%;}
+
+
+/* -------------------------------------------------------- */
+
+.join_yy {
+  float: left;
+  width: 150px; height: 50px;
+  margin-right: 5px;
+}
+.join_yy input {  width: 100px; }
+
+.join_mm {
+  float: left;
+  width: 150px; height: 50px;
+  margin-right: 5px;
+}
+.join_mm select { width: 120px; height: 30px; border: 0;}
+.join_mm select:focus { outline: 0;}
+
+.join_dd {
+  float: left;
+  width: 150px; height: 50px;
+}
+.join_dd input {  width: 100px; }
+
+/* -------------------------------------------------------- */
+
+.join_gender { width: 100%; height: 50px;}
+.join_gender select { width: 100%; height: 100%; border: 0;}
+.join_gender select:focus { outline: 0;}
+
+/* -------------------------------------------------------- */
+
+.join_email { width: 100%; height: 50px; margin-bottom: 40px;}
+.join_email input { width: 100%; height: 100%;}
+/* -------------------------------------------------------- */
+
+.join_nation { width: 100%; height: 50px; margin-bottom: 10px;}
+.join_nation select {width: 100%; height: 100%; border: 0;}
+.join_nation select:focus {outline: 0;}
+
+.join_phone { 
+  float: left;
+  width: 335px; height: 50px;
+}
+.join_phone input { width: 100%;}
+
+.join_num_area{ margin-bottom: 10px;}
+
+.join_num_btn {
+  float: right;
+  width: 110px; height: 50px;
+  border: 1px solid #dadada;
+  font-size: 15px; text-align: center;
+  color: #fff; font-weight: 100; 
+  background-color: #03c75a;
+}
+
+.join_num { width: 100%; height: 50px; margin-bottom: 40px;}
+/* -------------------------------------------------------- */
+
+.join_btn { 
+  width: 100%; height: 50px;
+  border: 1px solid #dadada;
+  font-size: 18px; font-weight: 700;
+  text-align: center;
+  color: #fff;
+  background-color: #03c75a;
+  cursor: pointer;
+}
+
+
+
+
+
+
+
+
 
