--- a/study_code/c_layout_01/css/common/reset.css
+++ b/study_code/c_layout_01/css/common/reset.css
@@ -12,7 +12,7 @@ ul,ol,li,dl,dt,dd,
 hr, button, img, div,
 header, article, nav, section, footer, aside, 
 main, figure, figcaption, hgroup,
-form, fieldset {
+form, fieldset, textarea, select {
   margin: 0; padding: 0; border: 0; font-size: 100%;
   box-sizing: border-box;
 }
@@ -29,6 +29,15 @@ abbr { text-decoration: none;}
 table, tr, td, th, thead, tbody, tfoot { 
   border: 1px solid #777; border-spacing: 0; border-collapse: collapse;
 }
+
+select, input { 
+  margin: 0; padding: 0; bottom: 0; 
+  box-sizing: border-box;
+}
+
+input[type="text"],
+input[type="password"] { text-indent: 0.5rem;}
+
 
 header, article, nav, section, footer, aside, 
 main, figure, figcaption, hgroup { display: block;}
