--- a/study_code/c_layout_01/css/src/b_08_naver_signup.css
+++ b/study_code/c_layout_01/css/src/b_08_naver_signup.css
@@ -11,6 +11,10 @@ h1 {
   background-position: 0 0;
   background-size: 240px auto;
 }
+h1 a {
+  display: block;
+  width: 100%; height: 100%;
+}
 .join_wrap { width: 500px; height: auto; margin: auto; margin-top: 50px;}
 
 .join_wrap li { 
@@ -133,6 +137,7 @@ input:focus { outline: 0;}
 
 .join_email { width: 100%; height: 50px; margin-bottom: 40px;}
 .join_email input { width: 100%; height: 100%;}
+.choice { font-size: 14px; font-weight: 100; color: #333;}
 /* -------------------------------------------------------- */
 
 .join_nation { width: 100%; height: 50px; margin-bottom: 10px;}
