--- a/study_code/c_layout_01/css/src/b_08_naver_join_result.css
+++ b/study_code/c_layout_01/css/src/b_08_naver_join_result.css
@@ -1,58 +1,86 @@
 @charset "UTF-8";
 /* b_08_naver_join_result.css */
-
-html, body { width: 100%; height: 100%;}
+html,body { width:100%; height:100%; }
 
 #wrap {
   width: 100%; height: auto; min-height: 100%;
-  padding-top: 40px;
-  /* background-color: #f5f6f7; */
+  padding-top:40px;  
+  /* background-color: #F5F6F7; */
   background-color: #999;
 }
 
 h1 {
-  width: 160px; height: 40px;
-  margin: auto; margin-bottom: 30px;
-  text-align: center; line-height: 40px; font-size: 1.2rem;
-  background-color: #03c75a;
+  width:160px; height: 40px;
+  margin:auto; margin-bottom:30px;
+  text-align: center; line-height:40px; font-size:1.2rem;
+  background-color: #03C75A;
 }
 
+/* --------------------------------- */
 #joinBox {
-  width: 500px; height: auto; min-height: 500px;
-  padding: 20px; margin: auto; margin-bottom: 30px;  
+  width: 500px; height:auto; min-height:500px;
+  padding:20px; margin:auto; margin-bottom: 30px;
 }
 
 fieldset {
-  width: 100%; height: auto;min-height: 30px;
-  margin-bottom: 30px;
+  width: 100%; height: auto; min-height:30px;
+  margin-bottom:30px;
   background-color: #fff;
 }
 
-fieldset > ul { width: 100%; height: auto;}
+fieldset > ul{ width: 100%; height: auto; }
 fieldset li { 
-  width: 100%; height: auto; min-height: 52px;
+  width: 100%; height: auto; min-height:52px;
   margin-bottom: 12px;
   background-color: #fdd;
 }
+fieldset li:last-child {margin-bottom: 0;}
 
-fieldset li:last-child { margin-bottom: 0;}
+label{ 
+  display:block; 
+  width: 100%; height: auto; margin-bottom: 5px; 
+  font-weight: 600; font-size:1.125rem;
+}
+.input_part {
+  width: 100%; height: 52px;
+  padding:10px 12px;
+  border:1px solid #c7c7c7;
+  border-radius: 0.1rem;
+}
+.input_part input { 
+  float:left; width: 325px; height: 100%; 
+  background-color: transparent;
+}
+
+#userName {width: 100%;}
+
+.input_part span { 
+  float:right; width:auto; height: 100%; 
+  color:#777; line-height: 30px;}
+
+.year_part {width: 100%; height:52px;}
+.particle {
+  float:left; width:146px; height: 100%; 
+  margin-right:10px; padding:10px 12px;
+  border:1px solid #c7c7c7; border-radius: 0.1rem;
+}
+.particle:last-of-type {margin: 0;}
+.birth {width: 100%; height: 100%;}
+
+  /* .input_part .birth {   } */
 
 
 
+fieldset li.action .input_part{ 
+  outline:2px solid #7a7; border-color:transparent;
+  background-color: #efe;
+}
 
 
-
-
-
-
-
-
-
-/* ----------------------------------------------------------- */
-
+/* --------------------------------- */
 #footBox {
-  width: 500px; height: 50px;
-  margin: auto;
-  padding-bottom: 10px; box-sizing: content-box;
+  width: 500px; height:50px; 
+  margin:auto; 
+  padding-bottom:10px; box-sizing: content-box;
   background-color: #fff;
 }
