--- a/study_code/c_layout_01/css/common/reset.css
+++ b/study_code/c_layout_01/css/common/reset.css
@@ -38,6 +38,7 @@ select, input {
 input[type="text"],
 input[type="password"] { text-indent: 0.5rem;}
 
+select, input, textarea { cursor: pointer;}
 
 header, article, nav, section, footer, aside, 
 main, figure, figcaption, hgroup { display: block;}
