--- a/study_code/c_layout_01/css/src/b_08_naver_join_result.css
+++ b/study_code/c_layout_01/css/src/b_08_naver_join_result.css
@@ -1,12 +1,21 @@
 @charset "UTF-8";
 /* b_08_naver_join_result.css */
+/**
+ * li class="action"  이 들어가면 input요소에 focus될경우 수행하는 기능
+ * 인증쪽(???) class="disable" 이 들어가면 인증번호 입력 방지 
+*/
+/*  */
+.message  {width: 100%; height: auto; font-size:0.875rem;}
+.error .message { color:#f00; }
+.success .message {color:#03C75A;  }
+
+/* ------------------------ */
 html,body { width:100%; height:100%; }
 
 #wrap {
   width: 100%; height: auto; min-height: 100%;
   padding-top:40px;  
-  /* background-color: #F5F6F7; */
-  background-color: #999;
+  background-color: rgba(230,235,240,0.5);
 }
 
 h1 {
@@ -25,34 +34,32 @@ h1 {
 fieldset {
   width: 100%; height: auto; min-height:30px;
   margin-bottom:30px;
-  background-color: #fff;
 }
 
 fieldset > ul{ width: 100%; height: auto; }
 fieldset li { 
   width: 100%; height: auto; min-height:52px;
-  margin-bottom: 12px;
-  background-color: #fdd;
-}
+  margin-bottom: 12px;}
 fieldset li:last-child {margin-bottom: 0;}
 
 label{ 
   display:block; 
   width: 100%; height: auto; margin-bottom: 5px; 
-  font-weight: 600; font-size:1.125rem;
+  font-weight: 600; font-size:1.125rem;  
 }
 .input_part {
   width: 100%; height: 52px;
   padding:10px 12px;
   border:1px solid #c7c7c7;
   border-radius: 0.1rem;
+  background-color: #fff;
 }
 .input_part input { 
   float:left; width: 325px; height: 100%; 
   background-color: transparent;
 }
 
-.input_part .full {width: 100%; height: 100%; background-color: transparent;}
+fieldset .full {width: 100%; height: 100%; background-color: transparent;}
 
 .input_part span { 
   float:right; width:auto; height: 100%; 
@@ -63,12 +70,14 @@ label{
   float:left; width:146px; height: 100%; 
   margin-right:10px; padding:10px 12px;
   border:1px solid #c7c7c7; border-radius: 0.1rem;
+  background-color: #fff;
 }
 .particle:last-of-type {margin: 0;}
-.birth {width: 100%; height: 100%;}
+.birth {width: 100%; height: 100%; background-color: transparent;}
 
 .tel_part { float:left; width: 335px; height: 52px; 
-  padding:10px 12px; border:1px solid #c7c7c7; border-radius: 0.1rem; }
+  padding:10px 12px; border:1px solid #c7c7c7; border-radius: 0.1rem; 
+  background-color: #fff;}
 .tel_btn_part {float:right; width: 115px; height: 52px; }
 
 fieldset li.action .input_part{ 
@@ -76,6 +85,15 @@ fieldset li.action .input_part{
   background-color: #efe;
 }
 
+input[type="button"], 
+[type="submit"] { cursor: pointer; background-color: #03C75A; color:#fff; }
+[type="submit"] {width: 100%; height: 52px;}
+
+.disable {position:relative; z-index:100;}
+.disable:before { cursor: pointer;
+  content:""; display: block; position: absolute; top: 0; left: 0; z-index:10;
+  width: 100%; height: 100%; background-color: rgba(230,235,240,0.5);
+}
 
 /* --------------------------------- */
 #footBox {
@@ -84,3 +102,17 @@ fieldset li.action .input_part{
   padding-bottom:10px; box-sizing: content-box;
   background-color: #fff;
 }
+
+
+
+/* 속성선택자
+  선택 요소의 속성값을 선택하여 처리하는 선택자
+  [속성명="값"] {} 으로 사용
+  요소[속성명="값"] {}
+  ----------------------------------------------
+  요소[속성명^="값"] {}  : ^은 시작을   a[href^="http"] { }
+  요소[속성명$="값"] {}  : $은 끝을   a[href$="com"] { }
+  요소[속성명|="값"] {}  : |은 단어형식의 모든   a[class|="full"] { }  <a class="full-box wrap"></a>
+  요소[속성명*="값"] {}  : *은 모든(전체의)      a[class*="a"] { }
+  요소[속성명~="값"] {}  : ~은 분리가능한 단어(값)  a[class~="full"]{}  <a class="full box wrap"></a>
+*/
