--- a/study_code/c_layout_01/css/src/b_10_coupang_join.css
+++ b/study_code/c_layout_01/css/src/b_10_coupang_join.css
@@ -147,4 +147,6 @@ hr { margin-top: 20px; border-bottom: 1px solid #ddd;}
   margin-top: 20px;
   padding: 18px 16px;
   border: 1px solid #bbb;
+  font-size: 14px; font-weight: 500;
+  color: #333;
 }
