--- a/study_code/c_layout_01/css/src/b_10_coupang_join_result.css
+++ b/study_code/c_layout_01/css/src/b_10_coupang_join_result.css
@@ -1,47 +1,82 @@
 @charset "UTF-8";
 /* b_10_coupang_join_result.css */
 
-#wrap { width: 800px; height: auto;}
+html,body {width: 100%; height: 100%;}
+#wrap {  width: 460px; height: auto; min-height:100%;}
 
-.input_test {width: 300px;}
+/* #headBox ================================================ */
+#headBox {
+  width: 100%; height:46px; padding-top:48px; }
+h1 {width:195px; height: 46px; margin:auto; 
+    background-color: #acf; text-align: center;}
+h1 > a { display: block; width: 100%; height: 100%;}
 
-.input_test input{width: 30px; height: 30px; }
-.input_test label { display: block; width: 100%; height:30px;  }
-.input_test i {
-  float:left; 
-  width: 32px; height: 32px;
-  background-image: url("../../img/coupang/check_icon.png");
-  background-repeat: no-repeat;
-  background-position: 50% -50px;
-  background-size: initial;
-  transition: all 300ms ease;
+/* #joinBox =============================================== */
+#joinBox {
+  width: 100%; height: auto; min-height:300px;
+  margin-top: 20px;
+  background-color: #dff;
 }
-.input_test input { display:block; position: absolute; width: 0; height: 0;  z-index:-1; overflow: hidden;}
-.input_test input:focus + label {  background-color: #faa; border:2px solid #f00;}
-.input_test input:checked + label > i { background-position-Y:-6px; }
 
-/* ------------------------------------------ */
-.modal {
-  overflow: hidden;
-  position: fixed; top: 0; left: 0; right: 0; bottom: 0; z-index:2000;
-  width: 400px; height: 650px;
-  margin:auto;
+form { width: 100%; height: auto;}
+fieldset {
+  position: relative;
+  width: 100%; height: auto; 
+  padding-top:1.5rem; 
+  background-color: #fda;
+}
+legend {
+  position: absolute; top: 0; left: 0;
+  width: 100%; height: 1.5rem;
+  padding: 0;
+  background-color: #aff;
+}
+
+.private_data { width: 100%; height:auto; padding-top:2rem; }
+.private_data li { width: 100%; height: auto; margin-bottom: 14px; background-color: #ddd;}
+.private_data li:last-child {margin-bottom: 0;}
+
+.input_data {width: 100%; height: 50px; box-sizing: content-box; border-bottom:2px solid transparent;}
+.input_data input { float:right; width:calc(100% - 50px); height:100%; padding:14px 10px; 
+  border:1px solid #777; box-sizing: border-box;}
+.input_data label { 
+  float:left; width: 50px; height:50px; 
+  border:1px solid #777; border-right:0;box-sizing: border-box;
+  text-align: center; line-height: 50px; color:#777;
+  background-color: #eee;}
+.input_info {
+  display: none;
+  width: 100%; height:auto;
+  padding:0.5rem 1rem; font-size:0.95rem;
   background-color: #fff;
-  border-radius:0.1rem;
-  border:1px solid #ccc;
-}
-.modal:before {
-  content:""; display: block; 
-  position: fixed; top: 0; left: 0; z-index:-1;
-  width: 100%; height: 100%;
-  background-color: rgba(0,0,0,0.3);
-}
-.content {
-  width: 100%; height: 100%; 
-  padding: 1rem; padding-bottom: 4rem;
-  background-color: #fff;
 }
 
-.confirm_btn {
-  position: absolute; bottom: 1rem; right: 1rem;
+/* li에 추가 class첨부 ------------------------- */
+.write > .input_data {border-bottom-color:#07f;}
+.write  input {border-bottom: 0;}
+.write  label {border-bottom: 0;}
+.error > .input_data {border-bottom-color:#f33;}
+.error  input {border-bottom: 0;}
+.error  label {border-bottom: 0;}
+.error > .input_info {display: block; color:#f33;}
+.guide > .input_info {display: block; color:#575757;}
+
+.form_line {
+  border:0; border-bottom:1px solid #777; margin:1rem 0; }
+
+  [type="submit"] {
+    width: 100%; height: 50px;
+    color:#fff; 
+    border-radius:0.1rem;
+    font-weight: 600;
+    background-color: #0074e9;
+    box-shadow:inset 0 -0.3rem 0 rgba(0,0,0,0.3);
+    cursor: pointer;
+  }
+
+/* #footBox ================================================ */
+#footBox {
+  width: 100%; height: auto;
+  margin-top:1rem; text-align: center;
+  font-size:0.75rem;
 }
