--- a/study_code/a_project/css/src/event_v1.css
+++ b/study_code/a_project/css/src/event_v1.css
@@ -105,5 +105,7 @@ body {
     width: 300px; height: 60px;
     margin-left: -150px;
     border-radius: 10px;
+    font-size: 18px; line-height: 60px;
+    font-weight: 400; color: #fff;
     background-color: var(--color-sample1);
   }
