--- a/study_code/b_step_02/css/src/a_content.css
+++ b/study_code/b_step_02/css/src/a_content.css
@@ -9,5 +9,11 @@
 .part {
   width: 100%; height: auto;
   margin: auto; margin-bottom: 30px;
-  padding: 10px;
+  padding: 2rem;
+  border-bottom: 1px solid #333;
+}
+
+h2 {
+  margin-bottom: 0.5rem;
+  font-size: 1.3rem; font-weight: 700;
 }
