--- a/study_code/a_project/css/common/component.css
+++ b/study_code/a_project/css/common/component.css
@@ -73,7 +73,7 @@ html, body {
         position: relative;
         float: left;
         display: block;
-        width: auto;  height: 20px;
+        width: auto;  height: auto;
         margin-right: 5px;
         padding-right: 5px;
         font-size: 16px; font-weight: 400;
@@ -96,15 +96,25 @@ html, body {
   
       .unb_btn > li:last-child {margin-right: 0;}
   
-      .unb_language { width: auto; height: auto;}
-      .unb_language button {
+      .unb_language { position: relative; z-index: 10;}
+
+      .language_img {
+        display: block;
+        width: 60px; height: 20px;
+        margin-bottom: 10px;
+        background-image: url(../../img/global_1.png);
+        background-repeat: no-repeat;
+        background-size: contain;
+        background-position: 50% 50%;
+      }
+      .unb_language span {
         display: none;
         margin: 0; margin-bottom: 5px;
         font-size: 14px;
       }
-      .unb_language:hover button {
-        display: block;
-      }
+      .unb_language:hover span { display: block;}
+      .unb_language:focus span { display: block;}
+      /* .unb_language span:hover span { display: block;} */
   
   
       .unb_btn a { 
@@ -194,7 +204,7 @@ html, body {
       float: right;
       width: 300px; height: 30px;
       font-size: 16px; font-weight: 400;
-      text-align: left; color: #fff;
+      text-align: left; color: #ddd;
     }
   
       .foot_top_btn > div {
@@ -218,7 +228,7 @@ html, body {
       width: 600px; height: 30px;
       font-size: 16px; font-weight: 400;
       text-align: left;
-      color: #fff;
+      color: #ddd;
     }
   
     .foot_main_btn > li {
@@ -241,7 +251,7 @@ html, body {
       position: absolute;
       top: 50%; right: 0;
       width:3px; height: 3px;
-      background-color: #fff;
+      background-color: #ddd;
     }
   
     .foot_main_btn li:last-child:after,
@@ -262,7 +272,7 @@ html, body {
       display: block;
       margin-bottom: 20px;
       font-size: 16px; font-weight: 400;
-      color: #fff;
+      color: #ddd;
     }
   
     .foot_info > span:last-child {margin-bottom: 0;}
