--- a/study_code/a_project/css/src/event_v1.css
+++ b/study_code/a_project/css/src/event_v1.css
@@ -17,13 +17,13 @@ body {
 #eventBox {
   width: 1280px; height: auto;
   margin-top: 150px;
-  background: var(--color-sample1);
+  /* background: var(--color-sample1); */
 }
 
   .event_total_title {
     width: 1280px; height: 100px;
     margin-bottom: 50px;
-    background: var(--color-sample1);
+    /* background: var(--color-sample1); */
   }
 
     .event_total_title h2 {
@@ -39,7 +39,7 @@ body {
     width: 1200px; height: auto; min-height: 1300px;
     margin: auto;
     padding: 30px 60px;
-    background-color: var(--color-sample1);
+    /* background-color: var(--color-sample1); */
   }
     .event_tab {
       width: 1080px; height: 40px;
@@ -66,7 +66,7 @@ body {
   .tab_content {
     width: 1080px; height: auto; min-height: 820px;
     margin: auto; margin-top: 50px;
-    background-color: var(--color-sample1);
+    /* background-color: var(--color-sample1); */
   }
 
   .event_ing_wrap {
@@ -74,10 +74,11 @@ body {
   }
 
   .event {
+    position: relative;
     float: left;
     width: 300px; height: 380px;
     margin-right: 90px; margin-bottom: 60px;
-    background-color: var(--color-sample1);
+    /* background-color: var(--color-sample1); */
   }
 
   .event:nth-child(3n) {margin-right: 0;}
@@ -95,9 +96,19 @@ body {
     width: 300px; height: 40px;
     font-size: 16px; line-height: 40px;
     font-weight: 400;
-
   }
 
+  .event_hover { 
+    display: none;
+    position: absolute; top: 0; left: 0; z-index: 10;
+    width: 100%; height: 100%;
+    background-color: rgba(0, 0, 0, 0.2);
+    text-align: center; line-height: 380px;
+    color: #fff; text-decoration: underline;
+    font-size: 22px;
+  }
+  .event:hover .event_hover {display: block;}
+  .event > a:focus .event_hover {display: block;}
 
   .event_more {
     position: absolute;
@@ -107,5 +118,6 @@ body {
     border-radius: 10px;
     font-size: 18px; line-height: 60px;
     font-weight: 400; color: #fff;
-    background-color: var(--color-sample1);
+    /* background-color: var(--color-sample1); */
+    background-color: #333;
   }
