--- a/study_code/b_step_02/css/common/reset.css
+++ b/study_code/b_step_02/css/common/reset.css
@@ -11,8 +11,9 @@ p,pre,blockquote,address,
 ul,ol,li,dl,dt,dd,
 hr, button, img, div,
 header, article, nav, section, footer, aside, 
-main, figure, figcaption, hgroup {
-  margin: 0; padding: 0; font-size: 100%;
+main, figure, figcaption, hgroup,
+form, fieldset, textarea {
+  margin: 0; padding: 0; border: 0; font-size: 100%;
   box-sizing: border-box;
 }
 
@@ -31,3 +32,5 @@ table, tr, td, th, thead, tbody, tfoot {
 
 header, article, nav, section, footer, aside, 
 main, figure, figcaption, hgroup { display: block;}
+legend {width: 0; height: 0; padding: 0; bottom: 0; overflow: hidden;}
+textarea {resize: none; cursor: text;}
