--- a/study_code/b_step_02/css/src/c_08_menu_stlye.css
+++ b/study_code/b_step_02/css/src/c_08_menu_stlye.css
@@ -1,85 +1,54 @@
-@charset "UTF-8";
-/* c_08_menu_stlye.css */
-
 #wrap {
   width: 100%; height: auto;
-  padding-bottom: 1000px;
-  box-sizing: content-box;
+  padding-bottom:1000px; box-sizing: content-box;
 }
 
-h1 { 
+h1 {
   width: 800px; height: 300px; 
-  margin: auto; margin-bottom: 150px; 
-  text-align: center; line-height: 300px;
+  margin: auto; margin-bottom: 150px; text-align: center;
   background-color: #ddf;
 }
 
 .head_area {
   width: 1440px; height: 80px;
-  margin: auto; padding: 20px;
+  margin:auto; padding:20px;
   background-color: #acf;
 }
 
 h2 {
-  float: left;
-  width: 150px; height: 100%;
-  background-color: #fa0;
-}
-
+  float: left; width: 150px; height: 100%;
+  background-color: #fa0; }
 .navi {
-  float: right;
-  width: auto; height: auto;
-  background-color: #ddd;
-}
+  float: right; width: auto; height:auto;
+  background-color: #ddd; }
 
-.navi ul {
-  width: auto; height: auto;
-  /* background-color: #aca; */
+.navi ul {  width: auto; height: auto; 
+  /* background-color: #799; */
 }
-
-.navi ul::after {
-  content: ""; display: block; clear: both;
-}
-
+.navi ul:after {  content:""; display: block; clear: both;}
 .navi li {
-  float: left;
-  width: 150px; height: auto;
-  margin-left: 15px;
-}
-
-.title_link {
-  width: 100%; height: 40px;
-}
-.title_link a {
-  display: block; 
-  width: 100%; height: 100%; 
-  text-align: center; text-indent: 15px;
+  float:left; width:150px; height:auto; margin-left:15px; }
+.title_link{
+  width: 100%; height:40px;}
+.title_link a { display: block; width: 100%; height: 100%; 
   font-weight: bold; font-size: 1.1rem; line-height: 40px;
-  background-color: #caa;
-}
+  text-align: center; text-indent:15px;
+  background-color: #caa;}  
 
-.sub_nav {
-  display: none;
-  width: 100%; height: auto;
-}
-
-.sub_nav a {
-  display: block;
-  width: 100%; height: 30px; line-height: 30px;
-  text-indent: 15px;
-  margin-bottom: 10px;
-}
+.sub_nav{display: none; width: 100%; height: auto; }
+.sub_nav a {display: block; width: 100%; height: 30px; 
+  line-height:30px; margin-bottom:10px; text-indent:15px;}
 .sub_nav a:last-child {margin-bottom: 0;}
 .sub_nav a:hover {background-color: #faa; font-weight: bold;}
 
-/* .navi li:hover .sub_nav {display: block;} */
-.navi:hover .sub_nav {display: block;}
 
-.navi { position: relative; z-index: 100;}
-.navi::before {
-  content: ""; display: block;
-  position: absolute; left: calc(-100vw - 40px); bottom: 0; z-index: -1;
+/* .navi li:hover .sub_nav { display: block; } */
+/* .navi:hover .sub_nav { display: block; } */
+
+.navi{position: relative; z-index:100;}
+.navi:before {
+  content:""; display: block;  
+  position: absolute; left:calc(-100vw -  40px); bottom: 0; z-index:-1;
   transform: translate(50%);
-  width: 100vw; height: calc(100% - 40px);
-  background-color: #faf;
+  width:100vw; height:calc(100% - 40px); background-color: #faf;
 }
