--- a/study_code/b_step_02/css/src/c_09_media_query2.css
+++ b/study_code/b_step_02/css/src/c_09_media_query2.css
@@ -7,3 +7,7 @@ h2 {
   margin: auto;
   background-color: #fda;
 }
+
+@media all and (min-width: 320px) and (max-width: 600px) {
+  body { background-color: #f06;}
+}
