--- a/study_code/b_step_02/css/src/c_09_media_query2.css
+++ b/study_code/b_step_02/css/src/c_09_media_query2.css
@@ -10,4 +10,4 @@ h2 {
 
 @media all and (min-width: 320px) and (max-width: 600px) {
   body { background-color: #f06;}
-}
+} /* @media (320px ~ 600px) */
