--- a/study_code/b_step_02/css/src/c_12_responsive_test2.css
+++ b/study_code/b_step_02/css/src/c_12_responsive_test2.css
@@ -4,7 +4,7 @@
 #wrap { width: 100%; min-width: 320px; height: auto;}
 
 #headBox { 
-  position: fixed;
+  position: fixed; top: 0; left: 0;
   width: 100%; height: 60px;
   background-color: #333;
 }
