--- a/study_code/b_step_04/css/src/b_02_scss_list_dic.css
+++ b/study_code/b_step_04/css/src/b_02_scss_list_dic.css
@@ -24,22 +24,121 @@
   width: 100%;
 }
 
-.coffee_esspresso {
+.coffee_esspresso_area {
+  width: 10%;
+  height: 100%;
   background-color: #00f;
+  margin: auto;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
-.coffee_latte {
+.coffee_latte_area {
+  width: 20%;
+  height: 100%;
   background-color: #0af;
+  margin: auto;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
-.coffee_choco {
+.coffee_choco_area {
+  width: 30%;
+  height: 100%;
   background-color: #0df;
+  margin: auto;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
-.coffee_vanila {
+.coffee_vanila_area {
+  width: 40%;
+  height: 100%;
   background-color: #7af;
+  margin: auto;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
-.coffee_other {
+.coffee_other_area {
+  width: 50%;
+  height: 100%;
   background-color: #adf;
+  margin: auto;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+#viewBox {
+  width: 100%;
+  height: 65.1041666667vw;
+}
+
+.nav_area {
+  width: 960px;
+  height: auto;
+}
+.nav_area > li {
+  float: left;
+  width: auto;
+  height: 30px;
+}
+.nav_area a {
+  display: block;
+  width: 100%;
+  height: 100%;
+  background-color: #fa0;
+}
+.nav_area a > span {
+  display: block;
+  width: 0;
+  height: 0;
+  position: absolute;
+  z-index: -1;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+.nav_area:after, .nav_area::after {
+  content: "";
+  display: block;
+  clear: both;
+}
+
+.card {
+  width: 100%;
+  height: auto;
+}
+.card li {
+  float: left;
+  width: 100%;
+  height: 200px;
+  margin: 10px;
+  background-color: #fa0;
+}
+.card li > a {
+  display: block;
+  width: 100%;
+  height: 100%;
+  background-image: url(../../img/bar.png);
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+}
+.card li > a > span {
+  display: block;
+  width: 0;
+  height: 0;
+  position: absolute;
+  z-index: -1;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+.card:after, .card::after {
+  content: "";
+  display: block;
+  clear: both;
 }
